--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,4 @@
 body{
-  margin-top: 100px;
 
 }
 
@@ -16,6 +15,10 @@ img{
   width: 100px;
   height: 100px;
   text-align: center;
+}
+
+p{
+  font-size: 20px;
 }
 
 .Form{
