--- a/views/posts/index.erb
+++ b/views/posts/index.erb
@@ -1,9 +1,8 @@
-<h1>PUNK BEERS</h1>
 <div class="container">
 
 
 <% @allresponse.each do |key, array| %>
-  <h3><a href='/<%= key['id']%>'><%=key['name']%></a></h3>
+  <h3 class="text-center"><a href='/<%= key['id']%>'><%=key['name']%></a></h3>
  <% end %>
 
  </div>
