--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="/css/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <script src="/js/jquery-3.3.1.js" charset="utf-8"></script>
   <script src="/js/js/bootstrap.js" charset="utf-8"></script>
